fix: overflow body x, motion.section in techstach page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,3 +9,7 @@ html {
 .clip-section {
   clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
 }
+
+body {
+  overflow-x: hidden;
+}
